2023-07-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Use void for empty function parameter list

2023-07-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Update GPG key in SECURITY.md

2023-06-29 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix typo in aide.1 manual page

2023-06-27 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix child directory processing on equal match (closes: #154)

2023-06-12 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add missing ')' to log message
	* Fix handling of extended attributes on symlinks (closes: #156)

2023-06-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add progress bar (closes: #120)
	  - add new '--no-progress' parameter
	  - log some performance data in 'info' log level
	* Remove strerror() calls from thread log messages
	* Use AIDEVERSION only once in sources
	* Update aide.conf.5 manual page
	* Adjust memory allocation error messages
	* Add missing files to 'autoreconf-clean' Makefile target
	* Don't require database_out for --dry-init
	* Fix static linking of the aide binary

2023-05-28 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Use binary search tree to store node's children

2023-05-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Handle readlink() errors

2023-04-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add another missing lock for tree operations

2023-04-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add missing lock for tree operations during file system scan
	* Use gzread instead of gzgetc

2023-03-12 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Adjust documentation of num_workers config option
	* Require pthread (remove --without-pthread configure option)

2023-03-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Adjust log messages about check inode attribute comparison

2023-03-08 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add warning if rules contain not compiled-in attributes (closes: #153)

2023-03-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>