@@ -1,3 +1,6 @@
+2023-07-21 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Fix double free() during report generation (closes: #157)
+
 2023-07-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Use void for empty function parameter list
 
